Fix the footer height issue on mobile

--- a/wp-content/themes/cae/assets/css/main.css
+++ b/wp-content/themes/cae/assets/css/main.css
@@ -4200,8 +4200,7 @@ nav.affix {
       text-align: center; }
       .footer .text-right, .footer .text-right .social-icons {
         text-align: center;
-        padding: 0;
-        max-height: 40px; } }
+        padding: 0; } }
   .home .footer {
     padding-top: 0; }
   .footer input {
