--- a/wp-content/themes/cae/assets/scss/partials/_footer.scss
+++ b/wp-content/themes/cae/assets/scss/partials/_footer.scss
@@ -9,7 +9,7 @@
 		.text-right .social-icons {
 			text-align: center;
 			padding:0;
-			max-height: 40px;
+			//max-height: 40px;
 		}
 	}
 	.home & {
